--- a/Project/public/index.html
+++ b/Project/public/index.html
@@ -23,7 +23,7 @@
   <link rel="apple-touch-icon" href="../public/src/images/icons/apple-icon-114x114.png.png" sizes="114x114">
   <link rel="apple-touch-icon" href="../public/src/images/icons/apple-icon-120x120.png.png" sizes="120x120">
   <link rel="apple-touch-icon" href="../public/src/images/icons/apple-icon-144x144.png.png" sizes="144x144">
-  <link rel="apple-touch-icon" href="../public/src/images/icons/apple-icon-152x152180x180.png.png" sizes="152x152180x180">
+  <link rel="apple-touch-icon" href="../public/src/images/icons/apple-icon-152x152.png" sizes="152x152">
   <link rel="apple-touch-icon" href="../public/src/images/icons/apple-icon-180x180.png.png" sizes="180x180">
 </head>
 <body>
